[project]
name = "reflex-map"
version = "0.1.1"
description = "Reflex Map Component"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Daniel Fink", email = "danfink@mit.edu" },
    { name = "Nathan Bryant", email = "nathan@nathanbryant.dev" }
]
keywords = ["reflex", "reflex-custom-component", "map"]

[project.urls]
homepage = "https://github.com/daniel-fink/reflex-map"
source = "https://github.com/daniel-fink/reflex-map"

[project.optional-dependencies]
dev = ["build", "twine"]



[tool.poetry]
name = "reflex-map"
version = "0.1.1"
description = ""
authors = ["Daniel Fink <danfink@mit.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
reflex = "^0.5"

[tool.setuptools.packages.find]
where = ["custom_components"]


[build-system]
requires = ["setuptools", "wheel", "poetry-core"]
build-backend = "setuptools.build_meta"
#build-backend = "poetry.core.masonry.api"

