[project]
name = "reflex-map"
version = "0.2.1"
description = "Reflex Map Component"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Daniel Fink & Nathan Bryant", email = "danfink@mit.edu" },
    { name = "Nathan Bryant", email = "nathan@nathanbryant.dev" }
]
keywords = ["reflex", "reflex-custom-component", "map", "maplibre", "mapbox", "maplibre-gl", "mapbox-gl"]

[project.urls]
homepage = "https://reflex-map.reflex.run/"
source = "https://github.com/daniel-fink/reflex-map"

[tool.poetry] # Required for Poetry
name = "reflex-map"
version = "0.0.0"
description = ""
authors = [""]
readme = "README.md"
packages = [
    { include = "reflex_map", from = "custom_components" },
]

[tool.poetry.dependencies]
python = "^3.10"
reflex = "^0.6"

[tool.setuptools.packages.find]
where = ["custom_components"]


[build-system]
requires = ["setuptools", "wheel", "poetry-core"]
build-backend = "setuptools.build_meta"
# build-backend = "poetry.core.masonry.api"
